--- a/test2.html
+++ b/test2.html
@@ -105,31 +105,40 @@
   padding: 0.7%;
 }
 .sidebar {
-  width: 200px;
-  background-color: white; 
-  margin-top: 4.9px;
-  width: 260px;
-}
-.sidebar ul {
-  list-style: none;
-  padding: 0;
-}
-.sidebar li {
-  /* margin-bottom: 10px; */
-  border: 1px solid;
-  border-color: gray;
-}
-.sidebar li a {
-  display: block;
-  padding: 5px;
-  text-decoration: none;
-  color: #333;
-}
-.sidebar li a:hover {
-  background-color: black;
-  color: white;
-}
+            width: 200px;
+            background-color: white;
+            margin-top: 6.9px;
+            width: 300px;
 
+
+
+        }
+
+        .sidebar ul {
+            list-style: none;
+            padding: 0;
+            padding-right: 10px;
+
+        }
+
+        .sidebar li {
+            /* margin-bottom: 10px; */
+            border: 1px solid;
+            border-color: gray;
+        }
+
+        .sidebar li a {
+            display: block;
+            padding: 5px;
+            text-decoration: none;
+            color: #333;
+            height: 45px;
+        }
+
+        .sidebar li a:hover {
+            background-color: black;
+            color: white;
+        }
 </style>
 </head>
 
@@ -159,9 +168,9 @@
         
         <div>
         <ul id="train">
-          <li><a href="" style="text-decoration: none;  font-size: large; color: black;">Traning</a></li>
+          <li><a href="" style="text-decoration: none;  font-size: large; color: grey;">Traning</a></li>
           <li><a href=""
-              style="text-decoration: none; font-size: large; color: black;padding-left: 50px;">Certification</a></li>
+              style="text-decoration: none; font-size: large; color: grey;padding-left: 50px;">Certification</a></li>
         </ul>
         <select name="select " id="checkbox">
         <option value="">SORT BY NEWEST</option>
